After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 699211 - Title needs not to be set to "Oops!" message for tabs that have not been loaded yet
Title needs not to be set to "Oops!" message for tabs that have not been load...
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: Tabs
git master
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-04-29 10:48 UTC by Claudio Saavedra
Modified: 2013-05-20 22:27 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Claudio Saavedra 2013-04-29 10:48:31 UTC
Upon launching ephy most tabs are not loaded yet. If WebProcess crashes for one of the loaded tabs, though, all pages are changed to the error one. I think this is unnecessary if a page has not been loaded yet.
Comment 1 Claudio Saavedra 2013-05-20 22:27:40 UTC
commit abf19158a76fe9e6f944493b76d8a869d5e566b1
Author: Claudio Saavedra <csaavedra@igalia.com>
Date:   Tue May 21 01:25:06 2013 +0300

    ephy-web-view: do not load the crash page for pages that have not been loaded yet
    
    https://bugzilla.gnome.org/show_bug.cgi?id=699211