ephy-web-view: do not load the crash page for pages that have not been loaded yet

https://bugzilla.gnome.org/show_bug.cgi?id=699211